Bug 414089 - Double clicking panel reduces/maximizes last active window
Summary: Double clicking panel reduces/maximizes last active window
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-13 09:54 UTC by adrien.brunelat
Modified: 2019-11-13 18:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description adrien.brunelat 2019-11-13 09:54:54 UTC
SUMMARY

When switching from an application to the desktop, double clicking, or dragging from the titlebar maximizes/reduces the last active window. This looks ugly, particularly when the window is on another workspace.

STEPS TO REPRODUCE
1. setup a lattedock panel
2. open a window and maximize it
3. switch workspace
4. double click on the panel

OBSERVED RESULT

Previously used window will briefly appear in a buggy way to minimize.

EXPECTED RESULT

Nothing should happen.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.3.8-3-MANJARO
(available in About System)
KDE Plasma Version: 5.17.2
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-11-13 11:04:02 UTC
> When switching from an application to the desktop, double clicking, or dragging from the titlebar maximizes/reduces the last active window.

this in intentional and it is just fine as long as the last active window is not minimized.

> particularly when the window is on another workspace.

this could be a bug but in Plasma there is no term "workspace". What do you mean Virtual Desktop OR Activity OR Screen?
Comment 2 Michail Vourlakos 2019-11-13 12:25:33 UTC
Git commit adc76ddbc28a9a4b9fdbeea1ff316ad28daa4c36 by Michail Vourlakos.
Committed on 13/11/2019 at 12:23.
Pushed by mvourlakos into branch 'v0.9'.

dont drag/maximize windows from different desktops

--the last active window codepath provides a way to
drag and maximize/restore the last active window. This
should not occur when the last active window is not
in the current desktop and activity.
FIXED-IN:0.9.5

M  +4    -0    app/wm/abstractwindowinterface.cpp
M  +2    -0    app/wm/abstractwindowinterface.h
M  +3    -9    app/wm/tracker/windowstracker.cpp
M  +0    -1    app/wm/tracker/windowstracker.h
M  +9    -3    app/wm/waylandinterface.cpp
M  +7    -4    app/wm/xwindowinterface.cpp

https://commits.kde.org/latte-dock/adc76ddbc28a9a4b9fdbeea1ff316ad28daa4c36
Comment 3 Michail Vourlakos 2019-11-13 12:25:52 UTC
Git commit 6b5f4a952a8c707986195e9f1b35e3f3a3b0df2e by Michail Vourlakos.
Committed on 13/11/2019 at 12:25.
Pushed by mvourlakos into branch 'master'.

dont drag/maximize windows from different desktops

--the last active window codepath provides a way to
drag and maximize/restore the last active window. This
should not occur when the last active window is not
in the current desktop and activity.
FIXED-IN:0.9.5

M  +4    -0    app/wm/abstractwindowinterface.cpp
M  +2    -0    app/wm/abstractwindowinterface.h
M  +3    -9    app/wm/tracker/windowstracker.cpp
M  +0    -1    app/wm/tracker/windowstracker.h
M  +9    -3    app/wm/waylandinterface.cpp
M  +7    -4    app/wm/xwindowinterface.cpp

https://commits.kde.org/latte-dock/6b5f4a952a8c707986195e9f1b35e3f3a3b0df2e
Comment 4 adrien.brunelat 2019-11-13 18:25:11 UTC
Yeah I meant virtual desktop. Thanks for having taken a bit of time on that.